Closed
Bug 351492
Opened 19 years ago
Closed 19 years ago
HTTP authentication dialogs don't remember passwords, not prefilled
Categories
(Camino Graveyard :: General, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: phiw2, Assigned: Biesinger)
Details
(Keywords: regression)
Attachments
(2 files)
|
29.40 KB,
image/png
|
Details | |
|
4.34 KB,
patch
|
hwaara
:
review+
mark
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en; rv:1.9a1) Gecko/20060905 Camino/1.2+
Build Identifier: Mozilla/5.0 (Macintosh; U; PPC Mac OS X Mach-O; en; rv:1.9a1) Gecko/20060905 Camino/1.2+
HTTP authentication dialogs (those that pop up in a sheet) fail to remember the username/password, although it is store in the keychain.
The checkbox 'remember....' is also missing.
2006082604 (1.2+) -- OK
2006082701 (1.2+) -- Fails
Trunk only
Reproducible: Always
Steps to Reproduce:
1. go to site that asks for login (HTTP Auth)
2.
3.
Actual Results:
fields are blank, although the username and password are known
Expected Results:
fields are prefiled
Filing under Camino atm. Might affect Firefox as well, but for some reason, Firefox never remembered my details on the few sites where I need this.
| Reporter | ||
Comment 1•19 years ago
|
||
| Reporter | ||
Comment 2•19 years ago
|
||
possibly bug 265780
Comment 3•19 years ago
|
||
See bug 227632 for the Firefox version of this. And yes, mwu says this'll be easy to fix once bug 265780 lands.
Version: unspecified → 1.8 Branch
| Reporter | ||
Comment 4•19 years ago
|
||
Adam, you set this to 'branch', but on my copy of Camino 1.8.1 branch ('2006090504 '1.0+), this works correctly.
To be clear, and as far as *Camino* is concerned, this was working correctly (password remembered, fields prefilled) up to the 2006082604 (1.2+) trunk build.
It fails after that date.
Keywords: regression
Comment 5•19 years ago
|
||
Ah, sorry about that. Maybe biesi can comment on that bug's possible affects on Camino.
| Assignee | ||
Comment 6•19 years ago
|
||
well it wasn't _supposed_ to cause any regressions, but it's of course possible that it caused some.
taking...
Assignee: nobody → cbiesinger
Status: UNCONFIRMED → NEW
Ever confirmed: true
| Assignee | ||
Comment 7•19 years ago
|
||
oh... camino implements nsIAuthPromptWrapper too... I missed that in my queries, this might explain it. I'll investigate this further tomorrow.
Version: 1.8 Branch → Trunk
| Assignee | ||
Comment 8•19 years ago
|
||
OK, I hope I picked appropriate reviewers, please tell me if I didn't. Also, do I need an additional review?
And, sorry for taking so long to fix this :/
Attachment #238563 -
Flags: superreview?(mark)
Attachment #238563 -
Flags: review?(hwaara)
| Assignee | ||
Updated•19 years ago
|
Status: NEW → ASSIGNED
Comment 9•19 years ago
|
||
Comment on attachment 238563 [details] [diff] [review]
patch
Will we need to add a new .xpt-file to the build for this?
Attachment #238563 -
Flags: superreview?(mikepinkerton)
Attachment #238563 -
Flags: superreview?(mark)
Attachment #238563 -
Flags: review?(hwaara)
Attachment #238563 -
Flags: review+
Comment 10•19 years ago
|
||
Comment on attachment 238563 [details] [diff] [review]
patch
Looks good. Has anyone tested this in Camino?
| Assignee | ||
Comment 11•19 years ago
|
||
Yes, I did test this in Camino. No need for an xpt file.
| Reporter | ||
Comment 12•19 years ago
|
||
(In reply to comment #10)
> Looks good. Has anyone tested this in Camino?
All working fine on my side.
Updated•19 years ago
|
Attachment #238563 -
Flags: superreview?(mikepinkerton) → superreview+
Updated•19 years ago
|
Whiteboard: [needs checkin]
| Assignee | ||
Comment 13•19 years ago
|
||
fixed on trunk
Checking in src/application/AppComponents.mm;
/cvsroot/mozilla/camino/src/application/AppComponents.mm,v <-- AppComponents.mm
new revision: 1.15; previous revision: 1.14
done
Checking in src/browser/CocoaPromptService.h;
/cvsroot/mozilla/camino/src/browser/CocoaPromptService.h,v <-- CocoaPromptService.h
new revision: 1.7; previous revision: 1.6
done
Checking in src/browser/CocoaPromptService.mm;
/cvsroot/mozilla/camino/src/browser/CocoaPromptService.mm,v <-- CocoaPromptService.mm
new revision: 1.22; previous revision: 1.21
done
Status: ASSIGNED → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Whiteboard: [needs checkin]
You need to log in
before you can comment on or make changes to this bug.
Description
•