Bug 351492 Make Camino implement @mozilla.org/passwordmanager/authpromptfactory;1 so that its password manager works again r=hwaara sr=mento