camino/src/browser/CocoaPromptService.h
@@ -41,12 +41,13 @@
 
 #include "nsIStringBundle.h"
 #include "nsIPromptService.h"
+#include "nsIPromptFactory.h"
 #include "nsINonBlockingAlertService.h"
 #include "nsICookiePromptService.h"
 #include "nsCOMPtr.h"
 #import <Cocoa/Cocoa.h>
 
-class CocoaPromptService : public nsIPromptService, public nsICookiePromptService, public nsINonBlockingAlertService
+class CocoaPromptService : public nsIPromptService, public nsICookiePromptService, public nsINonBlockingAlertService, public nsIPromptFactory
 {
 public:
   CocoaPromptService();
@@ -56,6 +57,7 @@ public:
   NS_DECL_NSIPROMPTSERVICE;
   NS_DECL_NSICOOKIEPROMPTSERVICE;
   NS_DECL_NSINONBLOCKINGALERTSERVICE;
+  NS_DECL_NSIPROMPTFACTORY;
 
 private:
   NSString *GetCommonDialogLocaleString(const char *s);
